sensugo/devops-sensu-agent.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: devops-sts
  name: devops-sensu-agent
  namespace: sensugo
spec:
  serviceName: devops-sts
  replicas: 1
  selector:
    matchLabels:
      app: devops-sts
  template:
    metadata:
      labels:
        app: devops-sts
      name: devops-sts
    spec:
      containers:
      - command:
        - /opt/sensu/bin/sensu-agent
        - start
        - --log-level
        - debug
        image: <SENSU-AGENT-IMAGE>
        imagePullPolicy: IfNotPresent
        name: sensu-agent
      nodeSelector:
        app: sensugo
      tolerations:
      - effect: NoExecute
        key: app
        operator: Equal
        value: sensugo
