sensugo/sensu-backend.yaml
##
##sensu-backend connects with etcd which this deployment assumes deployed in etcd namespace. If there is a change, please update the command accrodingly.
##
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sensu-backend
  namespace: sensugo
spec:
  replicas: 1
  template:
    metadata:
      name: sensu-backend
      labels:
        app: sensu-backend
    spec:
      containers:
        - name: sensu-backend
          image: sensu/sensu:latest
          command: ["/opt/sensu/bin/sensu-backend", "start", "--no-embed-etcd", "--etcd-advertise-client-urls=http://etcd-0.etcd.sensugo:2379,http://etcd-1.etcd.sensugo:2379,http://etcd-2.etcd.sensugo:2379", "--log-level", "debug"]
          ports:
            - protocol: TCP
              containerPort: 8080
            - protocol: TCP
              containerPort: 8081
            - protocol: TCP
              containerPort: 3000
      nodeSelector:
          app: sensugo
      tolerations:
        - effect: NoExecute
          key: app
          operator: Equal
          value: sensugo
---
apiVersion: v1
kind: Service
metadata:
  name: sensu-backend
  namespace: sensugo
spec:
  selector:
    app: sensu-backend
  ports:
    - name: api
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: ws
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: webui
      protocol: TCP
      port: 3000
      targetPort: 3000
