sensugo/sensu-stateful-agent.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: devops-sts-statefulset-sensu-agent
  namespace: sensugo
spec:
  serviceName: devops-sts
  selector:
    matchLabels:
      app: devops-sts
  replicas: 1
  template:
    metadata:
      name: devops-sts
      labels:
        app: devops-sts
    spec:
      containers:
        - name: sensu-agent
          image: 230367374156.dkr.ecr.us-east-1.amazonaws.com/devops:sensu-agent-python
          command: ["/opt/sensu/bin/sensu-agent", "start", "--log-level", "debug"]
      nodeSelector:
          app: sensugo
      tolerations:
        - effect: NoExecute
          key: app
          operator: Equal
          value: sensugo
---
apiVersion: v1
kind: Service
metadata:
  name: devops-sts
  namespace: sensugo
spec:
  selector:
    app: devops-sts
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
