sensugo/sensu-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sensugo-ingress
  namespace: sensugo
  annotations:
    kubernetes.io/ingress.class: private-nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: sensugo-backend.mediaiqdigital.com
    http:
      paths:
      - backend:
          serviceName: sensu-backend
          servicePort: 8080
  - host: functional-monitoring.mediaiqdigital.com
    http:
      paths:
      - backend:
          serviceName: sensu-backend
          servicePort: 3000
